@@ -378,7 +378,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
         assertEquals(PROCESS_DEPLOY_COUNT, instances.size());
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
         assertEquals(PROCESS_DEPLOY_COUNT, runtimeService.createProcessInstanceQuery().deploymentId(deployment.getId()).count());
@@ -393,7 +393,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
 
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
 
@@ -406,7 +406,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
         assertEquals(PROCESS_DEPLOY_COUNT, instances.size());
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
 
@@ -468,7 +468,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
 
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
 
