@@ -56,16 +56,16 @@ public class ManagementServiceTest extends PluggableFlowableTestCase {
             
         });
 
-        assertEquals(new Long(11), tableCount.get(tablePrefix + "ACT_GE_PROPERTY"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_GE_BYTEARRAY"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RE_DEPLOYMENT"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RU_EXECUTION"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_ID_GROUP"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_ID_MEMBERSHIP"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_ID_USER"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RE_PROCDEF"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RU_TASK"));
-        assertEquals(new Long(0), tableCount.get(tablePrefix + "ACT_RU_IDENTITYLINK"));
+        assertEquals(Long.valueOf(11), tableCount.get(tablePrefix + "ACT_GE_PROPERTY"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_GE_BYTEARRAY"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RE_DEPLOYMENT"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RU_EXECUTION"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_ID_GROUP"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_ID_MEMBERSHIP"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_ID_USER"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RE_PROCDEF"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RU_TASK"));
+        assertEquals(Long.valueOf(0), tableCount.get(tablePrefix + "ACT_RU_IDENTITYLINK"));
     }
 
     @Test
